--- a/collaborate.html
+++ b/collaborate.html
@@ -188,7 +188,12 @@
         }
         
         @media (max-width: 600px) {
-            .page { padding: 60px 20px 100px 20px; }
+            body {
+                align-items: flex-start;
+            }
+            .page { 
+                padding: 30vh 24px 120px 24px;
+            }
         }
     </style>
     <script>
