--- a/sauna.html
+++ b/sauna.html
@@ -390,7 +390,7 @@
                 display: block;
                 width: 100%;
                 max-width: 280px;
-                margin: 12px 0 8px;
+                margin: 12px auto 8px;
                 order: 2;
             }
             .module-mobile-img img {
