--- a/sauna.html
+++ b/sauna.html
@@ -454,7 +454,7 @@
                     <div class="module-mobile-img"><img src="images/m1-sauna.png" alt="m1 sauna"></div>
                 </div>
                 <div class="module-item" data-module="m2">
-                    <span class="module-thumb" style="width: 48px; height: 48px;"><img src="images/m2-bridge.png" alt="m2" style="filter: invert(1) brightness(3);"></span>
+                    <span class="module-thumb"><img src="images/m2-bridge.png" alt="m2"></span>
                     <span class="module-name">m2: swimming bridge</span>
                     <span class="module-desc">direct water access.</span>
                     <span class="module-dimensions">1.5 × 2.0 × 0.3 m</span>
