--- a/documents.html
+++ b/documents.html
@@ -208,8 +208,8 @@
 
         <section class="section">
             <ul class="doc-list">
-                <li><a href="https://siteplanning.lyn.page" target="_blank" class="doc-link external">product and site planning tool</a></li>
-                <li><a href="https://github.com/lynbtc" target="_blank" class="doc-link external">github.com/lynbtc</a></li>
+                <li><a href="https://siteplanning.lyn.page" target="_blank" class="doc-link external">site planning tool</a></li>
+                <li><a href="https://github.com/lynbtc" target="_blank" class="doc-link external">open source</a></li>
             </ul>
         </section>
     </main>
