--- a/onepager.html
+++ b/onepager.html
@@ -219,7 +219,7 @@
 
         <section class="section">
             <span class="muted">contact</span><br>
-            <a href="mailto:julius@lynbitcoin.com" class="link">julius@lynbitcoin.com</a><br>
+            <a href="mailto:julius@lyn.page" class="link">julius@lyn.page</a><br>
             <a href="https://cal.com/lynmeet" target="_blank" class="link">cal.com/lynmeet</a>
         </section>
     </main>
