--- a/residence.html
+++ b/residence.html
@@ -249,11 +249,7 @@
             <div class="block">
                 <span class="muted">access</span> (coming 2026)<br>
                 private visits. day spa. offsites.<br>
-                <a href="https://cal.com/lynmeet" target="_blank" class="link">check availability</a>
-            </div>
-
-            <div class="block">
-                <a href="mailto:sauna@lyn.page" class="link">sauna@lyn.page</a>
+                <a href="mailto:sauna@lyn.page" class="link">inquire</a>
             </div>
         </div>
 
