--- a/residence.html
+++ b/residence.html
@@ -11,13 +11,13 @@
     <style>
         :root {
             --bg: #fafafa;
-            --text: #37352f;
+            --text: #1a1a1a;
             --text-muted: #a0a0a0;
         }
         [data-theme="dark"] {
             --bg: #111111;
-            --text: #c8c8c8;
-            --text-muted: #666666;
+            --text: #ffffff;
+            --text-muted: #999999;
         }
         * { margin: 0; padding: 0; box-sizing: border-box; }
         html, body {
@@ -59,14 +59,14 @@
         }
 
         .image-column img {
-            max-width: 85%;
-            max-height: 65vh;
+            max-width: 100%;
+            max-height: 80vh;
             object-fit: contain;
             transition: opacity 0.3s ease-in-out;
             opacity: 0;
         }
         .image-column img.loaded {
-            opacity: 0.9;
+            opacity: 1;
         }
 
         .block {
@@ -234,7 +234,7 @@
 
             <div class="block">
                 <span class="muted">work</span> – adaptable space for focused sessions. tech integrated, hidden when not in use.<br>
-                <span class="muted">spa</span> – the <a href="sauna.html" class="link">sauna</a>. available for private day spa rental.
+                <span class="muted">spa</span> – the <a href="sauna.html">sauna</a>. available for private day spa rental.
             </div>
 
             <div class="block">
