--- a/onepager.html
+++ b/onepager.html
@@ -172,11 +172,8 @@
         }
         
         @media (max-width: 600px) {
-            body {
-                align-items: flex-start;
-            }
             .page { 
-                padding: 30vh 24px 120px 24px;
+                padding: 60px 20px 100px 20px;
             }
         }
     </style>
@@ -208,7 +205,9 @@
 
         <section class="section">
             <span class="muted">work</span><br>
-            <a href="sauna.html" class="link">sauna</a> | <a href="spa.html" class="link">spa</a> | <a href="residence.html" class="link">residence</a>
+            <a href="sauna.html">sauna</a><br>
+            <a href="spa.html">spa</a><br>
+            <a href="residence.html">residence</a>
         </section>
 
         <section class="section">
