--- a/collaborate.html
+++ b/collaborate.html
@@ -188,11 +188,8 @@
         }
         
         @media (max-width: 600px) {
-            body {
-                align-items: flex-start;
-            }
             .page { 
-                padding: 30vh 24px 120px 24px;
+                padding: 60px 20px 100px 20px;
             }
         }
     </style>
