--- a/collaborate.html
+++ b/collaborate.html
@@ -219,9 +219,9 @@
         </section>
 
         <section class="section">
-            <span class="muted">referral</span> – secure sites for the 2,100 finite units.<br>
-            <span class="muted">manufacturing</span> – licensed production under koerner specification.<br>
-            <span class="muted">sovereign</span> – placement + manufacturing. own a territory.
+            <span class="muted">referral</span> – secure sites for 1 of 2,100.<br>
+            <span class="muted">manufacturing</span> – licensed production under specification.<br>
+            <span class="muted">sovereign</span> – site planning + manufacturing.
         </section>
 
         <section class="section">
