--- a/collaborate.html
+++ b/collaborate.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>onepager</title>
-    <meta name="description" content="LYN. bitcoin is a quiet force. long hard assets. long sauna. long finite design.">
+    <title>collaborate</title>
+    <meta name="description" content="Develop sites with LYN. License the sauna system to thesis-aligned partners.">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%23111' width='100' height='100' rx='12'/></svg>">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,6 +50,22 @@
         }
         .section:last-child {
             margin-bottom: 0;
+        }
+        
+        /* Links */
+        .doc-list {
+            list-style: none;
+        }
+        .doc-link {
+            display: block;
+            padding: 2px 0;
+            transition: opacity 0.15s;
+        }
+        .doc-link:hover {
+            opacity: 0.6;
+        }
+        .doc-link.external {
+            color: var(--text-muted);
         }
         
         .muted {
@@ -193,37 +209,36 @@
 <body>
     <main class="page">
         <section class="section">
-            bitcoin is a quiet force. open. neutral. ruled by code, not rulers.<br>
-            outside the crumbling system. digital hard money. 21m coins. forever.
+            the asset is fixed. the opportunity is open.<br>
+            we license the sauna system to thesis-aligned partners.<br>
+            one architecture. one open network.
         </section>
 
         <section class="section">
-            lyn / danish for lightning.<br>
-            building in the nordics and beyond. btc native. finite.
+            <ul class="doc-list">
+                <li><a href="sauna.html" class="doc-link">sauna</a></li>
+                <li><a href="spa.html" class="doc-link">spa</a></li>
+                <li><a href="residence.html" class="doc-link">residence</a></li>
+            </ul>
         </section>
 
         <section class="section">
-            <span class="muted">thesis</span><br>
-            long hard assets. long sauna. long finite design.
+            <span class="muted">referral</span> – secure sites for 1 of 2,100.<br>
+            <span class="muted">manufacturing</span> – licensed production under specification.<br>
+            <span class="muted">sovereign</span> – site planning + manufacturing.
         </section>
 
         <section class="section">
-            <span class="muted">work</span><br>
-            <a href="sauna.html">sauna</a><br>
-            <a href="spa.html">spa</a><br>
-            <a href="residence.html">residence</a>
+            <ul class="doc-list">
+                <li><a href="https://koerner-sauna.de" target="_blank" class="doc-link external">koerner – manufacturing partner, europe</a></li>
+            </ul>
         </section>
 
         <section class="section">
-            <span class="muted">collaborate</span><br>
-            the design is fixed. the network is open.<br>
-            <a href="collaborate.html" class="link">develop sites with us</a>.
-        </section>
-
-        <section class="section">
-            <span class="muted">contact</span><br>
-            <a href="mailto:julius@lyn.page" class="link">julius@lyn.page</a><br>
-            <a href="https://cal.com/lynmeet" target="_blank" class="link">cal.com/lynmeet</a>
+            <ul class="doc-list">
+                <li><a href="https://siteplanning.lyn.page" target="_blank" class="doc-link external">site planning tool</a></li>
+            </ul>
+            <a href="mailto:julius@lyn.page" class="link">julius@lyn.page</a>
         </section>
     </main>
 
