--- a/sauna.html
+++ b/sauna.html
@@ -432,7 +432,7 @@
 
             <div class="block">
                 <span class="explore-link" onclick="openModal()">explore</span> <span class="muted">– 7 modules. one sauna.</span><br>
-                <a href="https://siteplanning.lyn.page" target="_blank" class="muted">configure your site ↗</a>
+                <a href="https://siteplanning.lyn.page" target="_blank" class="muted">configure 1/2,100 ↗</a>
             </div>
         </div>
 
