--- a/residence.html
+++ b/residence.html
@@ -98,6 +98,7 @@
             letter-spacing: 0.02em;
             color: var(--text-muted);
             opacity: 0.5;
+            z-index: 1;
         }
 
         /* Nav trigger - top right */
