--- a/onepager.html
+++ b/onepager.html
@@ -211,8 +211,7 @@
 
         <section class="section">
             <span class="muted">legal</span><br>
-            © lynbtc aps · copenhagen 2025<br>
-            vat dk46170571
+            © lynbtc aps · copenhagen 2025 · vat dk46170571
         </section>
     </main>
 
