--- a/residence.html
+++ b/residence.html
@@ -198,8 +198,7 @@
                 padding: 60px 20px 0;
             }
             .image-column img {
-                height: 45vh;
-                object-fit: cover;
+                max-height: 45vh;
             }
         }
     </style>
