--- a/collaborate.html
+++ b/collaborate.html
@@ -211,11 +211,12 @@
             <span class="muted">sovereign</span> – site planning + manufacturing.
         </section>
 
-        <section class="section">
-            <ul class="doc-list">
-                <li><a href="https://koerner-sauna.de" target="_blank" class="doc-link external">koerner – manufacturing partner, europe</a></li>
-            </ul>
-        </section>
+       <section class="section">
+    <span class="muted">partner network</span>
+    <ul class="doc-list">
+        <li><a href="https://www.sauna-koerner.de/en/" target="_blank" class="doc-link external">koerner – manufacturing partner, europe</a></li>
+    </ul>
+</section>
 
         <section class="section">
             <ul class="doc-list">
