--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LYN.</title>
     <meta name="description" content="LYN. one sauna. seven modules. twentyonehundred sites.">
+    <meta property="og:title" content="LYN.">
+<meta property="og:description" content="one sauna. seven modules. twentyonehundred sites.">
+<meta property="og:image" content="https://lyn.page/images/og-image.png">
+<meta property="og:url" content="https://lyn.page">
+<meta property="og:type" content="website">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%23111' width='100' height='100' rx='12'/></svg>">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
