--- a/koerner.html
+++ b/koerner.html
@@ -504,7 +504,7 @@
         <section>
             <h2>Die 7 Module</h2>
 
-            <div class="module-item"><strong>M1: Sauna</strong> — Der Kern. Panoramaglas. 9 kW Ofen. 3,3 × 2,2 × 2,5 m · ab EUR 55.555</div>
+            <div class="module-item"><strong>M1: Sauna</strong> — Der Kern. Panoramaglas. +10 kW Ofen. 3,3 × 2,2 × 2,5 m · ab EUR 55.555</div>
             <div class="module-item"><strong>M2: Schwimmsteg</strong> — Direkter Wasserzugang. 1,5 × 2,0 × 0,3 m · EUR 11.111</div>
             <div class="module-item"><strong>M3: Umkleide</strong> — Übergangsraum mit Oberlicht. Optionale M4-Integration. 1,5 × 2,0 × 2,5 m · EUR 15.111</div>
             <div class="module-item"><strong>M4: Thermalmodul</strong> — Mining-Hardware. Wärmerückgewinnung. Standortabhängig. · EUR 3.111</div>
