--- a/invest.html
+++ b/invest.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LYN. — Invest</title>
-    <meta name="description" content="One architecture. 2,100 numbered units. Groundwork Studio × KOERNER Saunabau.">
+    <title>invest</title>
+    <meta name="description" content="One architecture. 2,100 numbered units. Groundwork Studio and KOERNER Saunabau.">
     <meta name="robots" content="noindex, nofollow">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='white'/></svg>">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -224,8 +224,8 @@
 
             <!-- LEAD -->
             <section>
-                <p class="lead">Groundwork Studio × KOERNER Saunabau.<br>2,100 numbered units.</p>
-                <p class="lead-sub">A modular sauna system. 7 modules, one fixed architecture. Designed by Morten Bo Jensen, manufactured by KOERNER — third generation, est. 1949. The M4 module mines bitcoin with the heat you're already producing. Numbered 1–2,100, then production closes.</p>
+                <p class="lead">One architecture. 2,100 numbered units.</p>
+                <p class="lead-sub">A modular sauna system. 7 modules, one fixed architecture. Designed by Morten Bo Jensen at Groundwork Studio, manufactured by KOERNER Saunabau — third generation, est. 1949. The M4 module mines bitcoin with the heat you're already producing. Numbered 1–2,100, then production closes.</p>
             </section>
 
             <!-- HERO -->
@@ -465,13 +465,13 @@
 
             <footer>
                 <p><strong>LYN.</strong></p>
-                <p class="small muted">lynbtc ApS · Copenhagen · VAT DK46170571</p>
+                <p class="small muted">lynbtc aps · copenhagen · vat dk46170571</p>
                 <div class="footer-links">
                     <a href="https://lyn.page">lyn.page</a>
-                    <a href="https://lyn.page/sauna.html">Sauna</a>
-                    <a href="https://siteplanning.lyn.page" target="_blank" rel="noopener noreferrer">Site Planning</a>
-                    <a href="https://lyn.page/onepager.html">One Pager</a>
-                    <a href="mailto:jsb@lyn.page">Contact</a>
+                    <a href="https://lyn.page/sauna.html">sauna</a>
+                    <a href="https://siteplanning.lyn.page" target="_blank" rel="noopener noreferrer">site planning</a>
+                    <a href="https://lyn.page/onepager.html">one pager</a>
+                    <a href="mailto:jsb@lyn.page">contact</a>
                 </div>
                 <div class="footer-legal">Strictly Confidential · Not for Distribution · Qualified Investors Only</div>
             </footer>
