--- a/invest.html
+++ b/invest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>invest</title>
+    <title>LYN. — Invest</title>
     <meta name="description" content="One architecture. 2,100 numbered units. Groundwork Studio and KOERNER Saunabau.">
     <meta name="robots" content="noindex, nofollow">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='white'/></svg>">
@@ -268,10 +268,10 @@
             <section>
                 <div class="section-label">Status</div>
                 <table class="table">
-                    <tr><td>Design</td><td><a href="https://www.studiogroundwork.com/" target="_blank" rel="noopener noreferrer">Groundwork Studio</a>. Morten Bo Jensen — 16 years Chief Designer at Vipp. Finalized.</td></tr>
+                    <tr><td>Design</td><td><a href="https://www.studiogroundwork.com/" target="_blank" rel="noopener noreferrer">Groundwork Studio</a>. Morten Bo Jensen — 16 years Chief Designer at <a href="https://vipp.com" target="_blank" rel="noopener noreferrer">Vipp</a>. Finalized.</td></tr>
                     <tr><td>Manufacturing</td><td><a href="https://www.sauna-koerner.de/en/" target="_blank" rel="noopener noreferrer">KOERNER Saunabau</a>. Albstadt, Germany. Third generation. Spec locked.</td></tr>
                     <tr><td>Prototype</td><td>In build at KOERNER.</td></tr>
-                    <tr><td>M4</td><td><a href="https://21energy.com/" target="_blank" rel="noopener noreferrer">21Energy</a> (Austria) + Orange Wheel.</td></tr>
+                    <tr><td>M4</td><td><a href="https://21energy.com/" target="_blank" rel="noopener noreferrer">21Energy</a> (Austria) + <a href="https://orange-wheel.com/bitcoin-mining" target="_blank" rel="noopener noreferrer">Orange Wheel</a>.</td></tr>
                     <tr><td>Site Planning</td><td>Live at <a href="https://siteplanning.lyn.page" target="_blank" rel="noopener noreferrer">siteplanning.lyn.page</a>.</td></tr>
                     <tr><td>Unit #001</td><td>Copenhagen or Lugano. Scouting.</td></tr>
                     <tr><td>Orders</td><td>Open.</td></tr>
@@ -285,12 +285,12 @@
                     <div class="team-item">
                         <span class="team-role">Founder</span>
                         Julius Schulze-Berge, Copenhagen
-                        <span class="team-detail">Previously Vipp, Trustpilot, Usercentrics.</span>
+                        <span class="team-detail">Previously <a href="https://vipp.com" target="_blank" rel="noopener noreferrer">Vipp</a>, Trustpilot, Usercentrics.</span>
                     </div>
                     <div class="team-item">
                         <span class="team-role">Design</span>
                         Morten Bo Jensen, <a href="https://www.studiogroundwork.com/" target="_blank" rel="noopener noreferrer">Groundwork Studio</a>
-                        <span class="team-detail">Vipp Shelter, Vipp Kitchen. iF Design Award jury.</span>
+                        <span class="team-detail"><a href="https://vipp.com" target="_blank" rel="noopener noreferrer">Vipp</a> Shelter, <a href="https://vipp.com" target="_blank" rel="noopener noreferrer">Vipp</a> Kitchen. iF Design Award jury.</span>
                     </div>
                     <div class="team-item">
                         <span class="team-role">Manufacturing</span>
@@ -299,7 +299,7 @@
                     </div>
                     <div class="team-item">
                         <span class="team-role">M4</span>
-                        <a href="https://21energy.com/" target="_blank" rel="noopener noreferrer">21Energy</a> + Orange Wheel
+                        <a href="https://21energy.com/" target="_blank" rel="noopener noreferrer">21Energy</a> + <a href="https://orange-wheel.com/bitcoin-mining" target="_blank" rel="noopener noreferrer">Orange Wheel</a>
                     </div>
                 </div>
             </section>
