--- a/invest.html
+++ b/invest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LYN. — Invest</title>
+    <title>invest</title>
     <meta name="description" content="One architecture. 2,100 numbered units. Groundwork Studio and KOERNER Saunabau.">
     <meta name="robots" content="noindex, nofollow">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='white'/></svg>">
